feature #10 / bug #11
added TextHeader as additional text element
refactored some shit
moved classes to more semantic folders
added implicit support for UiElements to register their own Callbacks
reverted primitive type changes for builder classes because of bug
made all fields in builder classes final
fixed js reference problem
added CILIB.init() function to bind CILIB to the window element
removed ci-looks.css since it was never used
refactored and removed sprintf dependency

updated version to 2.1.0